kubernetes/kube-system/cilium/gateway/gateway-external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.0.5.10
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.eviljungle.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.eviljungle.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: acme-crt
            namespace: cert-manager
